tests/baselines/reference/importCallExpressionGrammarError.errors.txt
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(5,8): error TS1325: Specifier of dynamic import cannot be spread element.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(7,17): error TS1325: Specifier of dynamic import cannot be spread element.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(8,12): message TS1450: Dynamic import must only have a specifier and an optional assertion as arguments
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(9,19): error TS2307: Cannot find module 'pathToModule' or its corresponding type declarations.
tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts(9,35): error TS1324: Dynamic import only supports a second argument when the '--module' option is set to 'esnext'.


==== tests/cases/conformance/dynamicImport/importCallExpressionGrammarError.ts (5 errors) ====
    declare function getSpecifier(): string;
    declare var whatToLoad: boolean;
    
    var a = ["./0"];
    import(...["PathModule"]);
           ~~~~~~~~~~~~~~~~~
!!! error TS1325: Specifier of dynamic import cannot be spread element.
    
    var p1 = import(...a);
                    ~~~~
!!! error TS1325: Specifier of dynamic import cannot be spread element.
    const p2 = import();
               ~~~~~~~~
!!! message TS1450: Dynamic import must only have a specifier and an optional assertion as arguments
    const p4 = import("pathToModule", "secondModule");
                      ~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'pathToModule' or its corresponding type declarations.
                                      ~~~~~~~~~~~~~~
!!! error TS1324: Dynamic import only supports a second argument when the '--module' option is set to 'esnext'.